tests/maistra/testdata/policy/appversion-instance.yaml
apiVersion: config.istio.io/v1alpha2
kind: listentry
metadata:
  name: appversion
spec:
  value: source.labels["version"]
